--- a/style/main.css
+++ b/style/main.css
@@ -35,3 +35,17 @@ body{
   height: 100px;
   text-align: center;
 }
+#OfflineList {
+  list-style-image: url(../img/listIcon.png);
+}
+#whenOffline{
+  height: 300px;
+  overflow: hidden;
+  box-shadow: 0 0 0 3px #ccc;
+
+}
+#listFlow{
+  overflow-y: auto;
+  width: 100%;
+  height: 70%;
+}
