--- a/style/main.css
+++ b/style/main.css
@@ -12,6 +12,7 @@ body{
   text-align: center;
   font-size: 1.6em;
   font-weight: bold;
+  box-shadow: inset 0 0 10px #000000;
 }
 .bgF{
   background-image: url(../img/tenor.gif);
