--- a/style/main.css
+++ b/style/main.css
@@ -104,6 +104,13 @@ body{
   display: none;
 }
 
+#contact{
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  font-size: 0.7em;
+}
+
 @media screen and (min-width:320px) and (max-width:700px){
  #main{
    width: 100%;
